fixed spacing issue with technologies

--- a/css/structure.css
+++ b/css/structure.css
@@ -145,7 +145,9 @@
     margin-top: 1.25rem;
 }
 
-.about-me-text, .competence-list {
+.about-me-text,
+.competence-list,
+.technology-list {
     margin-top: 0.5rem;
     margin-bottom: 1.5rem;
 }
